--- a/lang/en.json
+++ b/lang/en.json
@@ -14,7 +14,7 @@
   "all_servers": "All servers",
   "allow_camera_upload": "Allow camera upload",
   "allow_channels": "Allow channels",
-  "allow_sync": "Allow sync",
+  "allow_sync": "Allow downloads",
   "app_logs": "Application logs",
   "app_name": "VODUM",
   "app_version": "Application version",
@@ -44,6 +44,8 @@
   "choose_language": "Choose your language",
   "cleanup_unfriended_no_users": "No users to process.",
   "cleanup_unfriended_processed": "{count} user(s) were set to 'unfriended' because they no longer had access to any library.",
+  "collapse_show_more": "View more",
+  "collapse_show_less": "Show less",
   "confirm": "Confirm",
   "confirm_delete_server": "Delete this server permanently?",
   "created_at": "Created",
