--- a/lang/de.json
+++ b/lang/de.json
@@ -27,6 +27,9 @@
   "backup_settings": "Sicherungseinstellungen",
   "backup_subtitle": "Verwaltung der Datenbanksicherungen",
   "body": "Inhalt",
+  "brand_name": "Brand name",
+  "brand_name_placeholder": "e.g. Vodum",
+  "brand_name_hint": "Name displayed in emails (if empty, Vodum will be used).",
   "campaign_created": "Kampagne erstellt",
   "campaign_editor": "Kampagnen-Editor",
   "campaign_help": "Verfügbare Platzhalter: {username}, {email}, {expiration_date}",
@@ -77,6 +80,7 @@
   "details": "Details",
   "disable_on_expiry": "Zugriff bei Ablauf deaktivieren",
   "email": "E-Mail",
+  "email_automatic_notice": "Dies ist eine automatisch versendete E-Mail.",
   "email_days_before": "Tage vor Ablauf",
   "email_history": "E-Mail-Verlauf",
   "email_template_body": "Vorlageninhalt",
