--- a/lang/en.json
+++ b/lang/en.json
@@ -27,6 +27,9 @@
   "backup_settings": "Backup settings",
   "backup_subtitle": "Manage database backups",
   "body": "Body",
+  "brand_name": "Brand name",
+  "brand_name_placeholder": "e.g. Vodum",
+  "brand_name_hint": "Name displayed in emails (if empty, Vodum will be used).",
   "campaign_created": "Campaign created",
   "campaign_editor": "Campaign editor",
   "campaign_help": "Available placeholders: {username}, {email}, {expiration_date}",
@@ -77,6 +80,7 @@
   "details": "Details",
   "disable_on_expiry": "Disable access at expiration",
   "email": "Email",
+  "email_automatic_notice": "This is an automated email.",
   "email_days_before": "Days before expiration",
   "email_history": "Email history",
   "email_template_body": "Template body",
