--- a/lang/es.json
+++ b/lang/es.json
@@ -27,6 +27,9 @@
   "backup_settings": "Configuración de copias de seguridad",
   "backup_subtitle": "Gestionar copias de seguridad de la base de datos",
   "body": "Contenido",
+  "brand_name": "Brand name",
+  "brand_name_placeholder": "e.g. Vodum",
+  "brand_name_hint": "Name displayed in emails (if empty, Vodum will be used).",
   "campaign_created": "Campaña creada",
   "campaign_editor": "Editor de campaña",
   "campaign_help": "Marcadores disponibles: {username}, {email}, {expiration_date}",
@@ -77,6 +80,7 @@
   "details": "Detalles",
   "disable_on_expiry": "Desactivar acceso al expirar",
   "email": "Correo",
+  "email_automatic_notice": "Este es un correo electrónico automático.",
   "email_days_before": "Días antes de la expiración",
   "email_history": "Historial de correos",
   "email_template_body": "Contenido del modelo",
