--- a/lang/fr.json
+++ b/lang/fr.json
@@ -27,6 +27,9 @@
   "backup_settings": "Paramètres de sauvegarde",
   "backup_subtitle": "Gérer les sauvegardes de la base de données",
   "body": "Contenu",
+  "brand_name": "Nom de marque",
+  "brand_name_placeholder": "Ex: Vodum",
+  "brand_name_hint": "Nom affiché dans les emails (si vide, Vodum sera utilisé).",
   "campaign_created": "Campagne créée",
   "campaign_editor": "Éditeur de campagne",
   "campaign_help": "Variables disponibles : {username}, {email}, {expiration_date}",
@@ -77,6 +80,7 @@
   "details": "Détails",
   "disable_on_expiry": "Désactiver l’accès à l’expiration",
   "email": "Email",
+  "email_automatic_notice": "Ceci est un email automatique.",
   "email_days_before": "Jours avant expiration",
   "email_history": "Historique des emails",
   "email_template_body": "Corps du modèle",
