--- a/lang/it.json
+++ b/lang/it.json
@@ -27,6 +27,9 @@
   "backup_settings": "Impostazioni backup",
   "backup_subtitle": "Gestisci i backup del database",
   "body": "Contenuto",
+  "brand_name": "Brand name",
+  "brand_name_placeholder": "e.g. Vodum",
+  "brand_name_hint": "Name displayed in emails (if empty, Vodum will be used).",
   "campaign_created": "Campagna creata",
   "campaign_editor": "Editor campagna",
   "campaign_help": "Segnaposto disponibili: {username}, {email}, {expiration_date}",
@@ -77,6 +80,7 @@
   "details": "Dettagli",
   "disable_on_expiry": "Disabilita accesso alla scadenza",
   "email": "Email",
+  "email_automatic_notice": "Questa è un'email automatica.",
   "email_days_before": "Giorni prima della scadenza",
   "email_history": "Cronologia email",
   "email_template_body": "Corpo del modello",
