--- a/lang/de.json
+++ b/lang/de.json
@@ -27,9 +27,9 @@
   "backup_settings": "Sicherungseinstellungen",
   "backup_subtitle": "Verwaltung der Datenbanksicherungen",
   "body": "Inhalt",
-  "brand_name": "Brand name",
-  "brand_name_placeholder": "e.g. Vodum",
-  "brand_name_hint": "Name displayed in emails (if empty, Vodum will be used).",
+  "brand_name": "Markenname",
+  "brand_name_placeholder": "z. B. Vodum",
+  "brand_name_hint": "Name, der in E-Mails angezeigt wird (falls leer, wird Vodum verwendet).",
   "campaign_created": "Kampagne erstellt",
   "campaign_editor": "Kampagnen-Editor",
   "campaign_help": "Verfügbare Platzhalter: {username}, {email}, {expiration_date}",
@@ -242,6 +242,24 @@
   "subscription_active": "Abonnement aktiv",
   "subscription_status": "Abonnementstatus",
   "subscription_plan": "Abonnementplan",
+  "subscription_gift_history_title": "Geschenkverlauf",
+  "subscription_refresh": "Aktualisieren",
+  "subscription_loading": "Wird geladen",
+  "subscription_users_updated": "Benutzer aktualisiert",
+  "subscription_days_added": "Tage hinzugefügt",
+  "subscription_unknown_error": "Unbekannter Fehler",
+  "subscription_request_failed": "Anfrage fehlgeschlagen",
+  "subscription_gift_history_empty": "Noch keine Geschenke erfasst.",
+  "subscription_gift_history_user": "Benutzer",
+  "subscription_gift_history_scope_all": "Alle Benutzer",
+  "subscription_gift_history_scope_server": "Benutzer des Servers",
+  "subscription_gift_history_days": "Tage",
+  "subscription_modal_target": "Ziel",
+  "subscription_modal_duration": "Dauer",
+  "subscription_modal_users_updated": "Aktualisierte Benutzer",
+  "subscription_modal_server": "Server",
+  "subscription_modal_comment": "Kommentar",
+  "subscription_modal_users": "Benutzer",
   "suspended": "Suspendiert",
   "tautulli_api_key": "Tautulli API-Schlüssel",
   "tautulli_url": "Tautulli-URL",
