--- a/lang/es.json
+++ b/lang/es.json
@@ -27,9 +27,9 @@
   "backup_settings": "Configuración de copias de seguridad",
   "backup_subtitle": "Gestionar copias de seguridad de la base de datos",
   "body": "Contenido",
-  "brand_name": "Brand name",
-  "brand_name_placeholder": "e.g. Vodum",
-  "brand_name_hint": "Name displayed in emails (if empty, Vodum will be used).",
+  "brand_name": "Nombre de la marca",
+  "brand_name_placeholder": "p. ej. Vodum",
+  "brand_name_hint": "Nombre mostrado en los correos electrónicos (si está vacío, se usará Vodum).",
   "campaign_created": "Campaña creada",
   "campaign_editor": "Editor de campaña",
   "campaign_help": "Marcadores disponibles: {username}, {email}, {expiration_date}",
@@ -242,6 +242,24 @@
   "subscription_active": "Abono activo",
   "subscription_status": "Estado del abono",
   "subscription_plan": "Plan de abono",
+  "subscription_gift_history_title": "Historial de regalos",
+  "subscription_refresh": "Actualizar",
+  "subscription_loading": "Cargando",
+  "subscription_users_updated": "usuarios actualizados",
+  "subscription_days_added": "días añadidos",
+  "subscription_unknown_error": "Error desconocido",
+  "subscription_request_failed": "Error en la solicitud",
+  "subscription_gift_history_empty": "Aún no se ha registrado ningún regalo.",
+  "subscription_gift_history_user": "Usuario",
+  "subscription_gift_history_scope_all": "Todos los usuarios",
+  "subscription_gift_history_scope_server": "Usuarios del servidor",
+  "subscription_gift_history_days": "días",
+  "subscription_modal_target": "Destino",
+  "subscription_modal_duration": "Duración",
+  "subscription_modal_users_updated": "Usuarios actualizados",
+  "subscription_modal_server": "Servidor",
+  "subscription_modal_comment": "Comentario",
+  "subscription_modal_users": "Usuarios",
   "suspended": "Suspendido",
   "tautulli_api_key": "Clave API Tautulli",
   "tautulli_url": "URL de Tautulli",
