--- a/lang/it.json
+++ b/lang/it.json
@@ -27,9 +27,9 @@
   "backup_settings": "Impostazioni backup",
   "backup_subtitle": "Gestisci i backup del database",
   "body": "Contenuto",
-  "brand_name": "Brand name",
-  "brand_name_placeholder": "e.g. Vodum",
-  "brand_name_hint": "Name displayed in emails (if empty, Vodum will be used).",
+  "brand_name": "Nome del marchio",
+  "brand_name_placeholder": "ad es. Vodum",
+  "brand_name_hint": "Nome visualizzato nelle email (se vuoto, verrà utilizzato Vodum).",
   "campaign_created": "Campagna creata",
   "campaign_editor": "Editor campagna",
   "campaign_help": "Segnaposto disponibili: {username}, {email}, {expiration_date}",
@@ -242,6 +242,24 @@
   "subscription_active": "Abbonamento attivo",
   "subscription_status": "Stato dell’abbonamento",
   "subscription_plan": "Piano di abbonamento",
+  "subscription_gift_history_title": "Storico dei regali",
+  "subscription_refresh": "Aggiorna",
+  "subscription_loading": "Caricamento",
+  "subscription_users_updated": "utenti aggiornati",
+  "subscription_days_added": "giorni aggiunti",
+  "subscription_unknown_error": "Errore sconosciuto",
+  "subscription_request_failed": "Richiesta non riuscita",
+  "subscription_gift_history_empty": "Nessun regalo registrato al momento.",
+  "subscription_gift_history_user": "Utente",
+  "subscription_gift_history_scope_all": "Tutti gli utenti",
+  "subscription_gift_history_scope_server": "Utenti del server",
+  "subscription_gift_history_days": "giorni",
+  "subscription_modal_target": "Destinazione",
+  "subscription_modal_duration": "Durata",
+  "subscription_modal_users_updated": "Utenti aggiornati",
+  "subscription_modal_server": "Server",
+  "subscription_modal_comment": "Commento",
+  "subscription_modal_users": "Utenti",
   "suspended": "Sospeso",
   "tautulli_api_key": "Chiave API Tautulli",
   "tautulli_url": "URL Tautulli",
